[project]
name = "IMC_Prosperity-profiler"
version = "0.0.5"
authors = [
  { name="r4v4rg4s", email="ravargas.42t@gmail.com" },
]
description = "A program to visualize prosperity run method performance"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = [
    "jsonpickle>=4.0.2",
    "numpy>=1.24.4",
    "pandas>=2.0.3",
    "snakeviz>=2.2.1",
]
[tool.setuptools.packages.find]
include = ["profiler", "profiler.*"]
namespaces = false

[project.urls]
Homepage = "https://github.com/rvargas42/IMC_Prosperity-profiler"
Issues = "https://github.com/rvargas42/IMC_Prosperity-profiler/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
prosperityprofiler = "profiler.__main__:main"

